# brane

./: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile.bld  Dockerfile.dev  Dockerfile.drv  Dockerfile.job  Dockerfile.plr  Dockerfile.rls  Dockerfile.ssl  Dockerfile_dev.api  Dockerfile_dev.bld  Dockerfile_dev.build  Dockerfile_dev.clb  Dockerfile_dev.drv  Dockerfile_dev.job  Dockerfile_dev.plr  Dockerfile_dev.ssl  Makefile  README.md  brane.yml  build.sh  docker-compose-brn-dev.yml  docker-compose-brn.yml  docker-compose-svc.yml  infra_brane2.yml  make.sh  mount_data.sh  open_ports.sh  start.sh  things_wrong.txt
.cargo/: config.toml
.github/workflows/: audit.yml
brane-api/: Cargo.toml
brane-api/src/: errors.rs  health.rs  main.rs  schema.rs  (+2 more)
brane-bvm/: Cargo.toml
brane-cfg/: Cargo.toml
brane-clb/: Cargo.toml
brane-clb/proto/: callback.proto
brane-clb/src/: interface.rs  main.rs
brane-cli/: Cargo.toml
brane-drv/: Cargo.toml
brane-dsl/: Cargo.toml
brane-job/: Cargo.toml
brane-let/: Cargo.toml
brane-log/: Cargo.toml
brane-net/: Cargo.toml
brane-oas/: Cargo.toml
brane-plr/: Cargo.toml
brane-shr/: Cargo.toml
data/: 255tweets.csv
kube/: aux-kafka.yaml  aux-minio.yaml  aux-redis.yaml  aux-registry.yaml  aux-scylla.yaml  aux-zookeeper.yaml  brane-api.yaml  brane-clb.yaml  brane-drv.yaml  brane-job.yaml  brane-log.yaml  brane-networkpolicy.yaml  brane-plr.yaml  brane-xenon.yaml  once-format.yaml
specifications/: Cargo.toml
specifications/src/: common.rs  container.rs  errors.rs  lib.rs  package.rs  registry.rs  version.rs
(+78 files in other folders)
