[package]
name = "brane-clb"
version = "0.5.0"
authors = ["Onno Valkering", "Tim Müller"]
edition = "2018"

[dependencies]
anyhow = "1"
bytes = "1"
# clap = { version = "3.0.5", features = [ "derive" ] }
dotenv = "0.15"
env_logger = "0.9"
futures = "0.3"
log = "0.4"
prost = "0.8"
rdkafka = { version = "0.26", features = ["cmake-build"] }
structopt = "0.3"
time = "0.3"
tokio = { version = "1", features = ["full"] }
tonic = "0.5"

[build-dependencies]
tonic-build = "0.5"
