[package]
name = "specifications"
version = "0.5.0"
authors = ["Onno Valkering", "Tim Müller"]
edition = "2018"

[dependencies]
anyhow = "1"
base64 = "0.13"
chrono = { version = "0.4", features = ["serde"] }
const_format = "0.2.22"
reqwest = { version = "0.11", features = ["json", "stream"] }
semver = "1.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_repr = "0.1"
serde_test = "1.0"
serde_with = "1.9"
serde_yaml = "0.8"
strum = "0.23.0"
strum_macros = "0.23"
tar = "0.4.38"
uuid = { version = "0.8", features = ["serde", "v4"] }